[tool.poetry]
name = "l4y3rc4k3"
version = "0.1.0"
description = ""
authors = ["WeeknightMVP"]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^5.3.1"
more-itertools = "^8.6.0"
Jinja2 = "^2.11.2"
pydot = "^1.4.1"
graphviz = "^0.15"
Pillow = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
